...
                        HStack{
                            ProfileRowView(ImageName: "person", title: "Gender", tintColor: Color(.systemGray))
                            
                            Spacer()
                            
                            Picker("Gender", selection: $gender) {
                                            Text("Male").tag("Male")
                                            Text("Female").tag("Female")
                                        }
                                        .pickerStyle(SegmentedPickerStyle())
                                        .onAppear {
                                            gender = user.gender ?? ""
                                        }
                        }
...
                    VStack(alignment:.leading, spacing:12){
                        HStack{
                            ProfileRowView(ImageName: "ruler", title: "Neck", tintColor: Color(.systemGray))
                            
                            Spacer()
                            
                            TextField("Ex. 12", text: $neck)
                                        .font(.subheadline)
                                        .foregroundColor(neck.isEmpty ? .gray : .primary)
                                        .multilineTextAlignment(.trailing)
                                        .onAppear {
                                            neck = user.neck.map { String($0) } ?? ""
                                        }
...
                        updateMeasurementsAndAge()
                        navigateToProfile = true
                          }
                    
                                    } label:{
                    HStack{
                        Text("Update Measurements")
                            .fontWeight(.semibold)
                        Image(systemName:"arrow.right")
                    }
                    .foregroundColor(.white)
                    .frame(width:UIScreen.main.bounds.width - 40, height:48)
                }
...
        /*VStack{
         VStack(alignment: .leading){
         Text("Username")
         .font(Font.custom("Koulen", size: 32))
         .foregroundColor(Color(red: 0.13, green: 0.51, blue: 0.87))
         HStack{
         Text("Profile")
         .font(Font.custom("Koulen", size: 16))
         .foregroundColor(.black)
         
         }
         }
         .offset(x: -105, y: -250)
...
